--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit~=1.7.0
+streamlit==1.7.0
 streamlit_option_menu==0.3.2
 numpy==1.22.2
-pandas~=1.4.1
-plotly~=5.8.0
-numpy~=1.22.2
-matplotlib~=3.5.1
-wordcloud~=1.8.1
-Pillow~=9.0.1
+pandas==1.4.1
+plotly==5.8.0
+numpy==1.22.2
+matplotlib==3.5.1
+Pillow==9.0.1
 click==8
